# Iris-img-to-palette

./: .gitignore  README.md  pyproject.toml
.github/workflows/: codeql.yml
aicore/: gwo_extraction.py  saliency_extraction.py
app/: config.py  graphql_schema.py  main.py  palette_service.py  storage.py
app/core/: model_extract_colors.py
app/services/: palette_service.py
app/static/css/: index.css
app/static/js/: events.js  index.js
app/static/js/ui/: export.js  mobile.js
app/static/js/uploader/: file.js  keyboard.js  palette.js  preview.js  state.js  theme.js
app/static/js/utils/: dom.js  theme.js
app/templates/: index.html
app/templates/partials/: extract_response.html  history.html  result.html
core/ai/: __init__.py  gwo_extraction.py  k_means_extractor.py  saliency_extraction.py
core/ai/main_extractors/: gwo_extraction.py  k_means_extractor.py  saliency_extraction.py
extractor_app/: main.py
extractor_app/templates/: index.html
extractor_app/templates/partials/: result.html
models/: Iris1.0.pth
scripts/: __init__.py  color_hex.py  color_oklab.py  color_oklch.py  extract_colors.py
