[project]
name = "iris-img-to-palette"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "scikit-learn>=1.8.0",
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.35.0",
]
