[project]
name = "iris-img-to-palette"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "aiofiles>=24.1.0",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "scikit-learn>=1.8.0",
    "fastapi>=0.115.0",
    "pydantic-settings>=2.10.1",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.35.0",
    "niapy>=2.7.0",
]
